--- a/src/com/Ashir/PBO/Pertemuan7/Registration.form
+++ b/src/com/Ashir/PBO/Pertemuan7/Registration.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.Ashir.PBO.Pertemuan7.Registration">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -21,7 +21,7 @@
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="b4004" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="b4004" class="javax.swing.JTextField" binding="TxtNama">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -37,13 +37,15 @@
           <text value="NIM"/>
         </properties>
       </component>
-      <component id="6808" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="6808" class="javax.swing.JTextField" binding="TxtNIM">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="1e1ba" class="javax.swing.JLabel">
         <constraints>
@@ -53,15 +55,17 @@
           <text value="Prodi"/>
         </properties>
       </component>
-      <component id="23410" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="23410" class="javax.swing.JComboBox" binding="CBProdi">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
-            <item value="01. Informatika"/>
-            <item value="02. RPL"/>
-            <item value="03."/>
+            <item value=""/>
+            <item value="S1 Informatika"/>
+            <item value="S1 RPL"/>
+            <item value="S1 Elektro"/>
+            <item value="S1 Pertambangan"/>
           </model>
         </properties>
       </component>
@@ -89,13 +93,15 @@
           <text value="Laki-laki"/>
         </properties>
       </component>
-      <component id="a7c75" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+      <component id="a7c75" class="javax.swing.JTextField" binding="TxtTelp">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
       <component id="4731" class="javax.swing.JRadioButton" binding="perempuanRadioButton" default-binding="true">
         <constraints>
@@ -113,7 +119,7 @@
           <text value="Alamat"/>
         </properties>
       </component>
-      <component id="26c6" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+      <component id="26c6" class="javax.swing.JTextArea" binding="TxtAlamat">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
@@ -139,4 +145,10 @@
       </component>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="JK">
+      <member id="e2aa0"/>
+      <member id="4731"/>
+    </group>
+  </buttonGroups>
 </form>
